Created docker file and others